--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,15 @@
 {
   "name": "Basic Web Application",
-  "image": "mcr.microsoft.com/devcontainers/python:3.10",
+  "dockerComposeFile": "docker-compose.yml",
+  "service": "frontend",
+
+  // "image": "mcr.microsoft.com/devcontainers/python:3.10",
   // "settings": {
   //   "terminal.integrated.shell.linux": "/bin/bash"
   // },
   // "dockerComposeFile": "docker-compose.yml",
   // "service": "app",
-  // "workspaceFolder": "/workspace",
+  "workspaceFolder": "/workspace",
   "forwardPorts": [5000, 5173],
   "customizations": {
     "vscode": {
@@ -24,5 +27,5 @@
     }
   },
   // "postCreateCommand": "pip install -r requirements.txt && cd frontend && npm install",
-  "remoteUser": "vscode"
+  // "remoteUser": "vscode"
 }
