--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,26 +1,27 @@
-# .github/workflows/backend-ci.yml
-name: Backend CI # Workflow name displayed on GitHub
-# Triggers: Run on pushes to any branch and on pull requests
-on: [push, pull_request]
+name: Backend CI
+
+on:
+  push:
+  pull_request:
+
 jobs:
-test-backend: # Job ID
-name: Test Backend Code # Job name displayed on GitHub
-runs-on: ubuntu-latest # Runner environment
-steps:
-# Step 1: Check out the repository code
-- name: Check out code
-uses: actions/checkout@v4 # Use the official checkout action
-# Step 2: Set up Python environment
-- name: Set up Python
-uses: actions/setup-python@v5 # Use the official Python setup action
-with:
-python-version: '3.10' # Specify Python version matching your project
-# Step 3: Install backend dependencies
-- name: Install dependencies
-run: |
-python -m pip install --upgrade pip
-pip install -r backend/requirements.txt
-# Step 4: Run pytest
-# Ensure tests are run from the root directory or adjust paths accordingly
-- name: Run backend tests
-run: pytest backend/tests/
+  test-backend:
+    name: Test Backend Code
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r backend/requirements.txt
+
+      - name: Run backend tests
+        run: pytest backend/tests/
