--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,16 @@
     "axios": "^1.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.5.0"
+    "react-router": "^7.5.3",
+    "react-router-dom": "^7.5.3",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
@@ -30,8 +33,8 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.2",
-    "jest-environment-jsdom": "^29.6.2",
-    "vite": "^6.2.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "vite": "^6.3.4"
   },
   "jest": {
     "testEnvironment": "jsdom",
@@ -41,6 +44,7 @@
     "transform": {
       "^.+\\.(js|jsx)$": "babel-jest"
     },
+    "setupFiles": ["./jest.setup.js"],
     "setupFilesAfterEnv": [
       "@testing-library/jest-dom"
     ]
