--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "devDependencies": {
     "@babel/preset-react": "^7.26.3",
     "babel-jest": "^29.7.0"
-  }
+  },
+  "jest": {
+  "setupFiles": ["<rootDir>/jest.setup.js"]
+}
 }
