--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,22 +1,22 @@
 name: Frontend CI
 on: [push, pull_request]
+
 jobs:
-test-frontend:
-name: Test Frontend Code
-runs-on: ubuntu-latest
-steps:
-- name: Check out code
-uses: actions/checkout@v4
-# Step 1: Set up Node.js environment
-- name: Set up Node.js
-uses: actions/setup-node@v4 # Use the official Node.js setup action
-with:
-node-version: '22' # Specify Node.js version matching your project
-# Step 2: Install frontend dependencies
-# Use --prefix to specify the directory containing package.json
-- name: Install dependencies
-run: npm install --prefix frontend
-# Step 3: Run frontend tests
-# Use --prefix to run the command in the frontend directory
-- name: Run frontend tests
-run: npm test --prefix frontend
+  test-frontend:
+    name: Test Frontend Code
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+
+      - name: Install dependencies
+        run: npm install --prefix frontend
+
+      - name: Run frontend tests
+        run: npm test --prefix frontend
