cd: Automate push to Docker Hub on main branch merge

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,13 +1,10 @@
-name: Docker Build
+name: Docker Build and Push
 
-on:
-  push:
-    branches: 
-      - main
+on: [push, pull_request]
 
 jobs:
-  build-backend:
-    name: Build Backend Docker Image
+build-and-push-backend:
+    name: Build and Push Backend Docker Image
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -16,11 +13,14 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
-      - name: Build backend image
-        run: docker build -t myusername/backend-app:latest ./backend
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-  build-frontend:
-    name: Build Frontend Docker Image
+build-and-push-frontend:
+    name: Build and Push Frontend Docker Image
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -29,5 +29,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build frontend image
-        run: docker build -t myusername/frontend-app:latest ./frontend
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push frontend image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}
