--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -16,7 +16,6 @@ build-and-push-backend:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-        
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
@@ -41,4 +40,4 @@ build-and-push-frontend:
         with:
           context: ./frontend
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend-app:latest
