Modify yml file to add code coverage report of codecov

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -25,3 +25,15 @@ jobs:
 
       - name: Run backend tests
         run: pytest backend/tests/
+
+      - name: Run backend tests with coverage
+        working-directory: ./backend
+        run: |
+          pytest --cov=./ --cov-report=xml tests/
+          
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./backend/coverage.xml
+          flags: backend
