--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -22,15 +22,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r backend/test-requirements.txt
+          pip install pytest pytest-cov
 
       - name: Run backend tests
         run: pytest backend/tests/
 
       - name: Run backend tests with coverage
-        working-directory: ./backend
-        run: |
-          pytest --cov=main --cov-report=xml tests/
-          
+        run: pytest --cov=. --cov-report=xml tests/
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
