--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,13 +1,10 @@
 name: Backend CI
 on: [push, pull_request]
+
 jobs:
   test-backend:
     name: Test Backend Code
     runs-on: ubuntu-latest
-    env:
-      OPENVERSE_CLIENT_ID: ${{ secrets.OPENVERSE_CLIENT_ID }}
-      OPENVERSE_CLIENT_SECRET: ${{ secrets.OPENVERSE_CLIENT_SECRET }}
-      JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
 
     steps:
       - name: Check out code
@@ -21,17 +18,18 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r backend/test-requirements.txt
+          pip install -r backend/requirements.txt
           pip install pytest pytest-cov
 
       - name: Run backend tests
         run: pytest backend/tests/
-
-      - name: Run backend tests with coverage
-        run: pytest --cov=main --cov-report=xml tests/
+      
+      - name: Run tests with coverage
+        run: |
+          pytest --cov=main --cov-report=xml tests/
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+        run: pytest --cov=main --cov-report=xml tests/
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: backend/coverage.xml
