--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -29,7 +29,7 @@ jobs:
           pytest --cov=main --cov-report=xml tests/
 
       - name: Upload coverage to Codecov
-        run: pytest --cov=main --cov-report=xml tests/
+        run: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: backend/coverage.xml
