--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Run tests with coverage
         run: |
           cd backend
-          pytest --cov=main --cov-report=xml tests/
+          pytest backend/tests --cov=backend.main --cov-report=xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: backend/coverage.xml
+          files: coverage.xml
           flags: backend
