--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -22,14 +22,17 @@ jobs:
           pip install -r backend/requirements.txt
           pip install pytest pytest-cov
 
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=${{ github.workspace }}/backend" >> $GITHUB_ENV
+
       - name: Run tests with coverage
         run: |
           cd backend
-          pytest backend/tests --cov=backend.main --cov-report=xml
+          pytest tests --cov=main --cov-report=xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: coverage.xml
+          files: backend/coverage.xml
           flags: backend
