--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,14 @@
       "jsx",
       "json"
     ],
+    "coverageThreshold": {
+      "global": {
+        "lines": 50,
+        "branches": 50,
+        "functions": 50,
+        "statements": 50
+      }
+    },
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|webp|svg)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "identity-obj-proxy"
