--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,11 @@ services:
     build: ./backend
     ports:
       - "5000:5000"
+    command: python main.py
+    volumes:
+      - ./backend:/app
+    environment:
+      - FLASK_ENV=development
       
   frontend:
     build: ./frontend
@@ -12,6 +17,12 @@ services:
       - backend
     ports:
       - "5173:5173"
+    command: npm run dev
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - VITE_API_URL=http://backend:5000
   
 
   # Test services
