--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,7 @@ services:
     ports:
       - "5000:5000"
     command: python main.py
-    volumes:
-      - ./backend:/app
-    environment:
-      - FLASK_ENV=development
-      
+
   frontend:
     build: ./frontend
     depends_on:
@@ -18,14 +14,8 @@ services:
     ports:
       - "5173:5173"
     command: npm run dev
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
     environment:
       - VITE_API_URL=http://backend:5000
-  
-
-  # Test services
   backend-test:
     build:
       context: ./backend
@@ -42,5 +32,7 @@ services:
       dockerfile: Dockerfile.test
     volumes:
       - ./frontend:/app
-      - /app/node_modules
     command: npm test
+
+volumes:
+  node_modules:
